--- a/challenge_2/package.json
+++ b/challenge_2/package.json
@@ -2,7 +2,7 @@
   "name": "challenge_2",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "server.js",
   "dependencies": {
     "express": "^4.16.4"
   },
